# interstellar

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  docker-publish.yml
deploy/: README.md  deploy_htlc.sh  docker-compose-ghcr.yml  docker-compose.yml
evm/: compiler_config.json
evm/artifacts/: AddressLib.json  AddressLib_metadata.json  AmountCalculatorLib.json  AmountCalculatorLib_metadata.json  BaseEscrow.json  BaseEscrowFactory.json  BaseEscrowFactory_metadata.json  BaseEscrow_metadata.json  BaseExtension.json  BaseExtension_metadata.json  BitInvalidatorLib.json  BitInvalidatorLib_metadata.json  Clones.json  Clones_metadata.json  Context.json  Context_metadata.json  Create2.json  Create2_metadata.json  Create3.json  Create3Deployer.json  Create3Deployer_metadata.json  Create3_metadata.json  ECDSA.json  ECDSA_metadata.json  EIP712.json  EIP712_metadata.json  ERC165.json  ERC165_metadata.json  ERC721Burnable.json  ERC721Burnable_metadata.json  Errors.json  Errors_metadata.json  Escrow.json  EscrowDst.json  EscrowDst_metadata.json  EscrowFactory.json  EscrowFactory_metadata.json  EscrowSrc.json  EscrowSrc_metadata.json  Escrow_metadata.json  (+136 more)
evm/contracts/: AmountCalculatorLib.sol  BitInvalidatorLib.sol  ECDSA.sol  EIP7121.sol  EthReceiver.sol  ExtensionLib.sol  IDaiLikePermit.sol  IERC1271.sol  IERC7597Permit.sol  IOrderMixin.sol  IPermit2.sol  IWETH.sol  LimitOrderProtocol.sol  Math.sol  OffsetsLib.sol  OnlyWethReceiver.sol  OrderLib.sol  OrderMixin.sol  Pausable.sol  PermitAndCall.sol  PredicateHelper.sol  SafeERC20.sol  SeriesEpochManager.sol  Strings.sol
evm/contracts/access_token/: ERC721.sol  ERC721Burnable.sol  (+1 more)
relayer/: Dockerfile  README.md  env.example  pyproject.toml
relayer/src/relayer/: Resolver.json  __init__.py  db.py  ethereum_watcher.py  evm_relayer.py  evm_utils.py  main.py  state_machine.py  stellar_watcher.py
resolver/: Dockerfile  README.md  env.example  package-lock.json  pyproject.toml
resolver/src/resolver/: __init__.py  engine.py  main.py  soroban.py
ui/: Dockerfile  env.js  env.template.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.tsx
(+44 files in other folders)
