[project]
name = "relayer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Georgii Plotnikov", email = "accembler@gmail.com" }
]
dependencies = [
    "asyncio>=3.4.3",
    "web3>=7.12.1",
    "stellar_sdk>=12.3.0",
    "rich>=12.5.1",
    "rich.logging>=0.0.1",
    "dotenv>=0.9.9",
    "stellar-sdk[aiohttp]>=12.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "relayer:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/relayer"]
